# xcross

./: .gitignore  Dockerfile  Dockerfile-ALL  Dockerfile-ARM64  Dockerfile-I686  Dockerfile-M68K  Dockerfile-MIPS  Dockerfile-MIPS64  Dockerfile-MIPS64R6EL  Dockerfile-MIPSEL  Dockerfile-MIPSR6EL  Dockerfile-PPC  Dockerfile-PPC64LE  Dockerfile-SPARC64  Dockerfile.aarch64-unknown-linux-android  Dockerfile.all  Dockerfile.alpha  Dockerfile.alpha-unknown-linux-gnu  Dockerfile.alphaev4-unknown  Dockerfile.alphaev45-unknown  Dockerfile.alphaev5-unknown  Dockerfile.alphaev56-unknown  Dockerfile.alphaev6-unknown  Dockerfile.alphaev67-unknown  Dockerfile.android  Dockerfile.arc-unknown  Dockerfile.arcle-unknown  Dockerfile.arm  Dockerfile.arm64-unknown-linux-gnu  Dockerfile.armel-unknown-linux-gnu  Dockerfile.armel-unknown-linux-gnueabi  Dockerfile.armelhf-unknown-linux-gnu  Dockerfile.armelhf-unknown-linux-gnueabi  Dockerfile.armhf  Dockerfile.armv7a-unknown-linux-androideabi  Dockerfile.avr  Dockerfile.base  Dockerfile.hppa  Dockerfile.hppa-unknown-linux-gnu  Dockerfile.i386-unknown  (+110 more)
buildroot/: README.md  arc-unknown-linux-gnu.config  arceb-unknown-linux-gnu.config  arcebhs38-unknown-linux-gnu.config  archs38-unknown-linux-gnu.config  csky-unknown-linux-gnu.config  m68k-unknown-linux-uclibc.config  microblaze-unknown-linux-uclibc.config  microblazeel-unknown-linux-uclibc.config  mips64-unknown-linux-uclibcn32.config  mips64-unknown-linux-uclibcn64.config  mips64el-unknown-linux-uclibcn32.config  mips64el-unknown-linux-uclibcn64.config  nds32.config  openrisc-unknown-linux-musl.config  openrisc-unknown-linux-uclibc.config  (+15 more)
cmake/: arm64.cmake  (+139 more)
test/zlib/: CMakeLists.txt  README.md  conanfile.py  meson.build  vcpkg.json  zlib.cc
(+609 files in other folders)
